# nlp_hr_match

./: .env  .gitignore  DockerfileCelery  DockerfileFastapi  DockerfileFlet  README.md  docker-compose.yaml
backend/: main.py  pyproject.toml
backend/src/: config.py  contracts.py  routers.py
backend/src/utils/: celery_config.py  pdf.py
celery/: prompts.py  requirements.txt  tasks.py
experiments/: match_HR_Intel.ipynb  match_HR_bloom.ipynb  match_HR_gpt-neo-2.7B.ipynb  match_HR_mistral.ipynb  match_HR_openchat_1.ipynb  match_HR_openchat_3.5.ipynb
frontend/: main.py  pyproject.toml
frontend/src/: app.py  config.py  utils.py
frontend/src/assets/: index.html  manifest.json
